syntax = "proto3";

option go_package = "./proto";

package artwork;

message ProcessedArtworkInfo {
    uint64 artworkID = 1;
    string title = 2;
    string author = 3;
    string description = 4;
    SourceName source = 5;
    string sourceURL = 6;
    repeated string tags = 7;
    bool r18 = 8;
    repeated PictureInfo pictures = 9;


    enum SourceName {
        Pixiv = 0;
    }

    message PictureInfo {
        uint64 pictureID = 1;
        string directURL = 2;
        uint64 width = 3;
        uint64 height = 4;
        double blur_score = 5;
    }
}

message GetArtworkRequest {
    uint64 artworkID = 1;
}

message GetArtworkResponse {
    ProcessedArtworkInfo artwork = 1;
}

message GetPictureDataRequest {
    uint64 pictureID = 1;
}

message GetPictureDataResponse {
    bytes binary = 1;
}

service ArtworkService {
    rpc GetArtworkInfo(GetArtworkRequest) returns (GetArtworkResponse);
    rpc GetPictureData(GetPictureDataRequest) returns (stream GetPictureDataResponse);
}

